--- a/demo/dev/index.htm
+++ b/demo/dev/index.htm
@@ -102,7 +102,8 @@
             buttonOpts.push({
                 style: {
                     layout: 'horizontal',
-                    shape
+                    shape,
+                    tagline: false
                 },
                 fundingEligibility: {
                     paypal: {
@@ -124,7 +125,8 @@
             buttonOpts.push({
                 style: {
                     layout: 'horizontal',
-                    label
+                    label,
+                    tagline: false
                 },
                 fundingEligibility: {
                     paypal: {
@@ -145,7 +147,8 @@
         for (const fi of fis) {
             buttonOpts.push({
                 style: {
-                    layout: 'horizontal'
+                    layout: 'horizontal',
+                    tagline: false
                 },
                 fundingEligibility: {
                     paypal: {
@@ -179,7 +182,8 @@
         for (const product of products) {
             buttonOpts.push({
                 style: {
-                    layout: 'horizontal'
+                    layout: 'horizontal',
+                    tagline: false
                 },
                 fundingEligibility: {
                     paypal: {
