Add variations to demo

--- a/demo/dev/index.htm
+++ b/demo/dev/index.htm
@@ -24,7 +24,7 @@
         const taglines = [true, false];
         const labels = ['checkout', 'pay', 'buynow'];
         const products = ['flex'];
-        const instruments = ['card', 'bank', 'credit', 'balance'];
+        const instruments = ['card', 'bank', 'balance', 'credit'];
         const shapes = ['rect', 'pill']
 
         const markOpts = [
@@ -244,6 +244,132 @@
                     }
                 }
             });
+
+            if (instrument !== 'credit') {
+                buttonOpts.push({
+                    fundingSource: 'paypal',
+                    fundingEligibility: {
+                        paypal: {
+                            eligible: true
+                        },
+                        paylater: {
+                            eligible: true
+                        }
+                    },
+                    wallet: {
+                        paypal: {
+                            instruments: [
+                                {
+                                    type: instrument,
+                                    label: '••1337',
+                                    oneClick: (instrument === 'card' || instrument === 'balance')
+                                }
+                            ]
+                        }
+                    }
+                });
+
+            }
+
+            if (instrument === 'credit') {
+                buttonOpts.push({
+                    style: {
+                        layout: 'horizontal',
+                        tagline: false
+                    },
+                    fundingEligibility: {
+                        paypal: {
+                            eligible: true
+                        },
+                        credit: {
+                            eligible: true
+                        }
+                    },
+                    wallet: {
+                        paypal: {
+                            instruments: [
+                                {
+                                    type: instrument,
+                                    label: '••1337',
+                                    oneClick: (instrument === 'card' || instrument === 'balance')
+                                }
+                            ]
+                        },
+                        credit: {
+                            instruments: [
+                                {
+                                    type: instrument,
+                                    label: '••1337',
+                                    oneClick: (instrument === 'card' || instrument === 'balance')
+                                }
+                            ]
+                        }
+                    }
+                });
+
+                buttonOpts.push({
+                    fundingEligibility: {
+                        paypal: {
+                            eligible: true
+                        },
+                        credit: {
+                            eligible: true
+                        }
+                    },
+                    wallet: {
+                        paypal: {
+                            instruments: [
+                                {
+                                    type: instrument,
+                                    label: '••1337',
+                                    oneClick: (instrument === 'card' || instrument === 'balance')
+                                }
+                            ]
+                        },
+                        credit: {
+                            instruments: [
+                                {
+                                    type: instrument,
+                                    label: '••1337',
+                                    oneClick: (instrument === 'card' || instrument === 'balance')
+                                }
+                            ]
+                        }
+                    }
+                });
+
+                buttonOpts.push({
+                    fundingSource: 'credit',
+                    fundingEligibility: {
+                        paypal: {
+                            eligible: true
+                        },
+                        credit: {
+                            eligible: true
+                        }
+                    },
+                    wallet: {
+                        paypal: {
+                            instruments: [
+                                {
+                                    type: instrument,
+                                    label: '••1337',
+                                    oneClick: (instrument === 'card' || instrument === 'balance')
+                                }
+                            ]
+                        },
+                        credit: {
+                            instruments: [
+                                {
+                                    type: instrument,
+                                    label: '••1337',
+                                    oneClick: (instrument === 'card' || instrument === 'balance')
+                                }
+                            ]
+                        }
+                    }
+                });
+            }
         }
 
         for (const instrument of instruments) {
