--- a/demo/dev/index.htm
+++ b/demo/dev/index.htm
@@ -232,15 +232,18 @@
                         eligible: true
                     }
                 },
-                wallet: {
-                    paypal: {
-                        instruments: [
-                            {
-                                type: instrument,
-                                label: '••1337',
-                                oneClick: (instrument === 'card' || instrument === 'balance')
-                            }
-                        ]
+                userIDToken: 'abc123',
+                server: {
+                    wallet: {
+                        paypal: {
+                            instruments: [
+                                {
+                                    type: instrument,
+                                    label: '••1337',
+                                    oneClick: (instrument === 'card' || instrument === 'balance')
+                                }
+                            ]
+                        }
                     }
                 }
             });
@@ -256,15 +259,18 @@
                             eligible: true
                         }
                     },
-                    wallet: {
-                        paypal: {
-                            instruments: [
-                                {
-                                    type: instrument,
-                                    label: '••1337',
-                                    oneClick: (instrument === 'card' || instrument === 'balance')
-                                }
-                            ]
+                    userIDToken: 'abc123',
+                    server: {
+                        wallet: {
+                            paypal: {
+                                instruments: [
+                                    {
+                                        type: instrument,
+                                        label: '••1337',
+                                        oneClick: (instrument === 'card' || instrument === 'balance')
+                                    }
+                                ]
+                            }
                         }
                     }
                 });
@@ -285,24 +291,27 @@
                             eligible: true
                         }
                     },
-                    wallet: {
-                        paypal: {
-                            instruments: [
-                                {
-                                    type: instrument,
-                                    label: '••1337',
-                                    oneClick: (instrument === 'card' || instrument === 'balance')
-                                }
-                            ]
-                        },
-                        credit: {
-                            instruments: [
-                                {
-                                    type: instrument,
-                                    label: '••1337',
-                                    oneClick: (instrument === 'card' || instrument === 'balance')
-                                }
-                            ]
+                    userIDToken: 'abc123',
+                    server: {
+                        wallet: {
+                            paypal: {
+                                instruments: [
+                                    {
+                                        type: instrument,
+                                        label: '••1337',
+                                        oneClick: (instrument === 'card' || instrument === 'balance')
+                                    }
+                                ]
+                            },
+                            credit: {
+                                instruments: [
+                                    {
+                                        type: instrument,
+                                        label: '••1337',
+                                        oneClick: (instrument === 'card' || instrument === 'balance')
+                                    }
+                                ]
+                            }
                         }
                     }
                 });
@@ -316,24 +325,27 @@
                             eligible: true
                         }
                     },
-                    wallet: {
-                        paypal: {
-                            instruments: [
-                                {
-                                    type: instrument,
-                                    label: '••1337',
-                                    oneClick: (instrument === 'card' || instrument === 'balance')
-                                }
-                            ]
-                        },
-                        credit: {
-                            instruments: [
-                                {
-                                    type: instrument,
-                                    label: '••1337',
-                                    oneClick: (instrument === 'card' || instrument === 'balance')
-                                }
-                            ]
+                    userIDToken: 'abc123',
+                    server: {
+                        wallet: {
+                            paypal: {
+                                instruments: [
+                                    {
+                                        type: instrument,
+                                        label: '••1337',
+                                        oneClick: (instrument === 'card' || instrument === 'balance')
+                                    }
+                                ]
+                            },
+                            credit: {
+                                instruments: [
+                                    {
+                                        type: instrument,
+                                        label: '••1337',
+                                        oneClick: (instrument === 'card' || instrument === 'balance')
+                                    }
+                                ]
+                            }
                         }
                     }
                 });
@@ -348,24 +360,27 @@
                             eligible: true
                         }
                     },
-                    wallet: {
-                        paypal: {
-                            instruments: [
-                                {
-                                    type: instrument,
-                                    label: '••1337',
-                                    oneClick: (instrument === 'card' || instrument === 'balance')
-                                }
-                            ]
-                        },
-                        credit: {
-                            instruments: [
-                                {
-                                    type: instrument,
-                                    label: '••1337',
-                                    oneClick: (instrument === 'card' || instrument === 'balance')
-                                }
-                            ]
+                    userIDToken: 'abc123',
+                    server: {
+                        wallet: {
+                            paypal: {
+                                instruments: [
+                                    {
+                                        type: instrument,
+                                        label: '••1337',
+                                        oneClick: (instrument === 'card' || instrument === 'balance')
+                                    }
+                                ]
+                            },
+                            credit: {
+                                instruments: [
+                                    {
+                                        type: instrument,
+                                        label: '••1337',
+                                        oneClick: (instrument === 'card' || instrument === 'balance')
+                                    }
+                                ]
+                            }
                         }
                     }
                 });
@@ -385,15 +400,18 @@
                         eligible: true
                     }
                 },
-                wallet: {
-                    paypal: {
-                        instruments: [
-                            {
-                                type: instrument,
-                                label: '••1337',
-                                oneClick: (instrument === 'card' || instrument === 'balance')
-                            }
-                        ]
+                userIDToken: 'abc123',
+                server: {
+                    wallet: {
+                        paypal: {
+                            instruments: [
+                                {
+                                    type: instrument,
+                                    label: '••1337',
+                                    oneClick: (instrument === 'card' || instrument === 'balance')
+                                }
+                            ]
+                        }
                     }
                 }
             });
