Enable card button in demo page

--- a/demo/dev/index.htm
+++ b/demo/dev/index.htm
@@ -69,6 +69,9 @@
                                 eligible: true
                             }
                         }
+                    },
+                    card: {
+                        eligible: true
                     }
                 }
             });
@@ -93,6 +96,9 @@
                                 eligible: true
                             }
                         }
+                    },
+                    card: {
+                        eligible: true
                     }
                 }
             });
@@ -116,6 +122,9 @@
                                 eligible: true
                             }
                         }
+                    },
+                    card: {
+                        eligible: true
                     }
                 }
             });
